examples/main/rendered/envs/mykso-dev/argocd/service-argocd-redis-ha-haproxy.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    a8r.io/repository: git@github.com:mykso/myks.git
  labels:
    app.kubernetes.io/component: redis
    app.kubernetes.io/name: argocd-redis-ha-haproxy
    app.kubernetes.io/part-of: argocd
  name: argocd-redis-ha-haproxy
  namespace: argocd
spec:
  ports:
    - name: tcp-haproxy
      port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    app.kubernetes.io/name: argocd-redis-ha-haproxy
  type: ClusterIP
